2008-08-27  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/cairomm/cairomm.rc.in: Replaced #include "afxres.h" by
	#include <windows.h> which does the job equally well, and allows
	compilation with the freely available Visual Studio Express compiler.
	Bug #17322.

2008-08-24  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/enums.h: add LcdFilter enum
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h: add get/set_lcd_filter() API
	* tests/Makefile.am:
	* tests/test-font-options.cc: Added.
	* .gitignore: ignore new test executable

2008-08-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

	* cairomm/context.cc:
	* cairomm/context.h: added Context::show_text_glyphs()
	* cairomm/Makefile.am:
	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h:
	* tests/test-font-face.cc:
	* cairomm/types.h: rearranged some types slightly and moved them to a new file
	since I was getting circular dependencies with a lot of the basic struct types
	that are used by multiple classes

2008-08-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

	* cairomm/scaledfont.h: add default value for the font_options parameter of
	the ScaledFont constructor
	* tests/test-scaled-font.cc: add test to excercise the change

2008-08-22  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h: add text_to_glyphs() function
	* tests/Makefile.am:
	* tests/test-scaled-font.cc: Added.
	* .gitignore: ignore new test executable

2008-08-22  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h: add get/set_scaled_font() that was missed previously

2008-08-21  Jonathon Jongsma  <jjongsma@gnome.org>

	* tests/test-surface.cc: fix the image surface tests that create a file from a
	png stream to return a valid PNG stream so they don't throw an exception on
	creation.

2008-08-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc: