@@ -43,20 +43,87 @@ public:
   bool operator ==(const FontOptions& src) const;
   //bool operator !=(const FontOptions& src) const;
 
+  /**
+   * Merges non-default options from @a other into this, replacing existing
+   * values. This operation can be thought of as somewhat similar to compositing
+   * @a other onto this with the operation of OPERATION_OVER.
+   *
+   * @param other another FontOptions
+   **/
   void merge(const FontOptions& other);
 
+  /**
+   * Compute a hash for the font options object; this value will be useful when
+   * storing an object containing a FontOptions in a hash table.
+   *
+   * @return the hash value for the font options object.  The return value can
+   * be cast to a 32-bit type if a 32-bit hash value is needed.
+   **/
   unsigned long hash() const;
 
+  /**
+   * Sets the antialiasing mode for the font options object. This
+   * specifies the type of antialiasing to do when rendering text.
+   *
+   * @param antialias the new antialiasing mode
+   **/
   void set_antialias(Antialias antialias);
+  /**
+   * Gets the antialiasing mode for the font options object.
+   *
+   * @return the antialiasing mode
+   **/
   Antialias get_antialias() const;
 
+  /**
+   * Sets the subpixel order for the font options object. The subpixel order
+   * specifies the order of color elements within each pixel on the display device
+   * when rendering with an antialiasing mode of ANTIALIAS_SUBPIXEL. See the
+   * documentation for SubpixelOrder for full details.
+   *
+   * @param subpixel_order the new subpixel order
+   **/
   void set_subpixel_order(SubpixelOrder subpixel_order);
+  /**
+   * Gets the subpixel order for the font options object.  See the documentation
+   * for SubpixelOrder for full details.
+   *
+   * @return the subpixel order for the font options object
+   **/
   SubpixelOrder get_subpixel_order() const;
 
+  /**
+   * Sets the hint style for font outlines for the font options object.  This
+   * controls whether to fit font outlines to the pixel grid, and if so, whether
+   * to optimize for fidelity or contrast.  See the documentation for
+   * HintStyle for full details.
+   *
+   * @param hint_style the new hint style
+   **/
   void set_hint_style(HintStyle hint_style);
+  /**
+   * Gets the hint style for font outlines for the font options object.
+   * See the documentation for HintStyle for full details.
+   *
+   * @return the hint style for the font options object
+   **/
   HintStyle get_hint_style() const;
 
+  /**
+   * Sets the metrics hinting mode for the font options object. This
+   * controls whether metrics are quantized to integer values in
+   * device units.
+   * See the documentation for HintMetrics for full details.
+   *
+   * @hint_metrics: the new metrics hinting mode
+   **/
   void set_hint_metrics(HintMetrics hint_metrics);
+  /**
+   * Gets the metrics hinting mode for the font options object.  See the
+   * documentation for HintMetrics for full details.
+   *
+   * Return value: the metrics hinting mode for the font options object
+   **/
   HintMetrics get_hint_metrics() const;
 
   /**
